--- a/app/package.json
+++ b/app/package.json
@@ -12,5 +12,8 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "svelte": "^3.49.0",
     "vite": "^3.0.7"
+  },
+  "dependencies": {
+    "d3": "^7.6.1"
   }
 }
