Co-authored-by: jessdvila and Meow <jessdvila@users.noreply.github.com>

--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "d3": "^7.6.1",
-    "d3v4": "^4.2.2"
+    "d3v4": "^4.2.2",
+    "svelte-icons-pack": "^2.0.0"
   }
 }
