--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
