jessd/added logos & manifest in root

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,12 @@
   "devtools_page": "./devTools.html",
 
   "action": {
-    "default_title": "Sveltool"
+    "default_title": "Sveltool",
+    "icons": {
+      "16": "icon_16.png",
+      "48": "icon_48.png",
+      "128": "icon_128.png"
+    }
   },
 
   "background": {
